k8s/apps/dev/sonarqube/release.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: sonarqube
  labels:
    app: sonarqube
spec:
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
        np-ingress-controller-web: allow
        np-postgres: allow
        np-internet: allow # to download extensions
        np-internal: allow # for oidc
        np-metrics: allow
    spec:
      containers:
        - name: sonarqube
          image: sonarqube:10-community
          resources:
            limits:
              cpu: 800m
              memory: 4Gi
            requests:
              cpu: 400m
              memory: 2Gi
          ports:
            - name: web
              containerPort: 9000
          volumeMounts:
            - mountPath: /opt/sonarqube/extensions
              name: sonarqube-extensions
            - name: sonarqube-data
              mountPath: /opt/sonarqube/data
      volumes:
        - name: sonarqube-extensions
          persistentVolumeClaim:
            claimName: sonarqube-extensions
        - name: sonarqube-data
          persistentVolumeClaim:
            claimName: sonarqube-data
---
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
spec:
  ports:
    - protocol: TCP
      name: web
      port: 9000
  selector:
    app: sonarqube
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarqube
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonar.REDACTED`)
      kind: Rule
      services:
        - name: sonarqube
          port: 9000
  tls:
    secretName: REDACTED-cert
