k8s/apps/dev/sonarqube/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-sonarqube-matrixwh-out
spec:
  podSelector:
    matchLabels:
      app: sonarqube
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: services
        podSelector:
          matchLabels:
            app: matrix-webhook
